refactoring makefile